# ai-workflow

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  STATUS.md  pyproject.toml  tmp
.flows/: config.yaml
.flows/memory/: architect.md  ba.md  developer.md  meta.md  reviewer.md  test-arch.md  test-developer.md
.flows/prompts/: clarity.md  code-review.md  coding.md  create-branch-issue.md  create-pr-direct.md  create-pr-issue.md  create-pr-test.md  create-pr.md  design.md  domain-review.md  explore.md  fetch-issue.md  final-review.md  fix-lint.md  fix-review.md  fix-test.md  human-confirm-clarify.md  human-confirm-design.md  human-confirm.md  implement.md  modify-code.md  redesign.md  reflect.md  review.md  test-design.md  test-develop.md  test-integration.md  test-multiple-inputs.md  test-review.md  testability-review.md  testing.md
.flows/roles/: developer.yaml  fetcher.yaml  github.yaml  pr-creator.yaml  reviewer.yaml  test-developer.yaml
.flows/scripts/: create-branch.sh  create-pr.sh  fetch-issue.sh
.flows/workflows/: hello-world.yaml  sdet-dry-run-test.yaml  simple-pr.yaml  (+5 more)
docs/: langgraph-spike.md  workflow-test.md
flows/: .gitignore  config.yaml
scripts/: sdet-dry-run-test.sh
tests/: test_artifact_validator.py  test_bash_executor.py  test_cli.py  test_executors.py  test_github_scripts.py  test_init.py  test_integration_paths.py  test_loader.py  test_logger.py  test_mixed_executors.py  test_models.py  test_node_model.py  test_path_resolver.py  test_processor.py  test_prompt_processor.py  test_runner.py  test_state.py  test_upgrade.py
(+79 files in other folders)
